kubernetes/apps/home-automation/home-assistant/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  hosts:
    - hass.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: home-assistant.home-automation.svc.cluster.local
            port:
              number: 8123
